@@ -31,6 +31,21 @@ if(sizeof($subnetHost) != 0) {
 }
 
 
+/* detect duplicates */
+$unique = array();	
+$numbering = array();													
+$m = 0;
+foreach($subnetHost as $line) {
+	# check if already in array
+	if(in_array($line['description'], $unique)) {
+		$numbering[$line['description']]++;
+		$subnetHost[$m]['description'] = $line['description'].' #'.$numbering[$line['description']];
+	}
+	$unique[] = $subnetHost[$m]['description'];
+	$m++;
+}
+
+
 /* remove all but top 10 */
 $maxSubs = sizeof($subnetHost);
 
